<resources>
    <string name="app_name">KinoxScanner</string>
    <string name="update_serie">Serie aktualisieren</string>
    <string name="update_film">Film aktualisieren</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="manage_filme">Filme verwalten</string>
    <string name="manage_serien">Serien verwalten</string>
    <string name="action_close">App beenden</string>
    <string name="action_options">Optionen</string>
    <string name="action_add">Hinzufügen</string>
    <string name="action_remove">Löschen</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="lblName">Name:</string>
    <string name="lblAdresse">Adresse:</string>
    <string name="lblSerienID">Serien-ID:</string>
    <string name="lblImageSubDir">Bildordner:</string>
    <string name="lblSeason">Staffel:</string>
    <string name="lblEpisode">Episode:</string>
    <string name="lblWifiOnly">Stream und Download nur über W-Lan</string>
    <string name="lblSearchIsRunning">Die Suche läuft ....</string>
    <string name="lblBack">Zurück</string>
    <string name="lblBatteryOpt">App als Ausnahme in Akku-Optimierung</string>
    <string name="lblNextEpisode">Nächste Episode</string>
    <string name="lblNextSeason">Nächste Staffel</string>
    <string name="lblRemoveSeries">Serie komplett entfernen</string>
    <string name="lblSetCurrentDate">Datum aktualisieren</string>
    <string name="lblRemoveFilm">Film komplett entfernen</string>
    <string name="lblManageFilme">Filme verwalten</string>
    <string name="lblManageSerien">Serien verwalten</string>
    <string name="lblScanAgain">Erneut scannen</string>
    <string name="lblEditSerie">Serie bearbeiten</string>
    <string name="lblEditFilm">Film bearbeiten</string>
    <string name="lblSearchResults">Suchergebnisse</string>
    <string name="lblChooseVideoServer">Video-Server auswählen</string>
    <string name="CreateNewFilm">Neuen Film erfassen</string>
    <string name="NoFilmFound">Kein Film gefunden.</string>
    <string name="CreateNewSeries">Neue Serie erfassen</string>
    <string name="NoSeriesFound">Keine Serie gefunden.</string>
    <string name="HeaderDeleteFilmDialog">Film(e) löschen</string>
    <string name="QuestionDeleteFilmDialog">Sind Sie sicher, dass Sie den/die ausgewählte(n) Film(e) löschen wollen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="HeaderDeleteSeriesDialog">Serie(n) löschen</string>
    <string name="QuestionDeleteSeriesDialog">Sind Sie sicher, dass Sie die ausgewählte(n) Serie(n) löschen wollen?</string>
    <string name="QuotaWarning">Beim Download und Streamen von Videos fallen große Datenmengen an, die über Ihren Mobilfunkprovider Kosten für Sie verursachen können!</string>
    <string name="NoResultsFound">Keine Ergebnisse gefunden.</string>
    <string name="ConnectError">Verbindung konnte nicht hergestellt werden.</string>
    <string name="DownloadsReady">Folgende Downloads stehen bereit:</string>
    <string name="NoNetworkConnection">Es besteht derzeit keine Netzwerkverbindung!</string>
    <string name="AlarmWillBeSet">Alarm wird jetzt neu gesetzt!</string>
    <string name="never">niemals</string>
    <string name="LastChecked">"Zuletzt geprüft: "</string>
    <string name="SecServerWaitTime">" Sekunden Wartezeit pro Server"</string>
    <string name="NoWifiConnection">Sie sind nicht mit W-Lan verbunden!</string>
    <string name="UpdateFilm">Film aktualisieren</string>
    <string name="Date">"Datum: "</string>
    <string name="HeaderNotifyDownload">Kinoxscanner Download</string>
    <string name="DownloadStarted">"Download gestartet: "</string>
    <string name="FilesReady">" Datei(en) stehen jetzt bereit."</string>
    <string name="DownloadsAvailable">Downloads verfügbar!</string>
    <string name="DownloadsAvailableLong">Es sind Downloads verfügbar!</string>
    <string name="overview">Übersicht</string>
    <string name="mySeries">Meine Serien</string>
    <string name="myFilms">Meine Filme</string>
    <string name="drawer_open">Navigation öffnen</string>
    <string name="drawer_close">Navigation schließen</string>
    <string name="series_incomplete">Bitte alle Felder angeben. Mit der Suchfunktion können Adresse, SerienID und Bildordner ermittelt werden.</string>
    <string name="film_incomplete">Bitte alle relevanten Felder angeben. Das Datum kann leer bleiben. Mit der Suchfunktion können Adresse und Bildordner ermittelt werden.</string>
</resources>
