<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.theiner.kinoxscanner.activities.EditSerieActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblName"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">
            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/editName"/>
            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="right|center_vertical"
                android:background="@mipmap/small_icon"
                android:onClick="onRemoveText"/>
        </FrameLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:text="\?"
            android:onClick="onSearch"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAdresse"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editAddr"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSerienID"
            android:layout_marginTop="5dp"/>
        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:inputType="number"
            android:id="@+id/editSeriesID"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblImageSubDir"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="180dp"/>
        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="180dp"
            android:inputType="number"
            android:id="@+id/editImageSubDir"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSeason"
            android:layout_marginTop="5dp"/>
        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:inputType="number"
            android:id="@+id/editSeason"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEpisode"
            android:layout_marginTop="75dp"/>
        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:inputType="number"
            android:id="@+id/editEpisode"/>

        <ImageView
            android:layout_width="92dp"
            android:layout_height="132dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:id="@+id/ivCoverArt"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="onSave"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:text="@string/cancel"
            android:onClick="onExit"/>
    </RelativeLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>