<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.theiner.kinoxscanner.activities.OptionsActivity">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblWifiOnly"
        android:id="@+id/swWifiOnly"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/lblBatteryOpt"
        android:id="@+id/btnBatteryOpt"
        android:onClick="onBatteryOpt"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="110dp"
        android:id="@+id/radiogrp">
        <RadioButton android:id="@+id/radio_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kinox.to"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_kinosto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kinos.to"
            android:onClick="onRadioButtonClicked" />
        <RadioButton android:id="@+id/radio_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kinox.tv"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_ag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kinox.ag"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kinox.me"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kinox.am"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_nu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kinox.nu"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_pe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kinox.pe"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_sg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kinox.sg"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="@string/lblBack"
        android:onClick="onBack"/>
</RelativeLayout>
